@@ -44,7 +44,7 @@
         <li><a href="http://www.python.org" target="_blank">Python</a> 2.4</li>
         <li><a href="http://www.gtk.org" target="_blank">GTK+</a> 2.12</li>
         <li><a href="http://pygtk.org" target="_blank">PyGTK</a> 2.12</li>
-        <li><a href="http://pygtk.org" target="_blank">PyGObject</a> 2.12</li>
+        <li><a href="http://pygtk.org" target="_blank">PyGObject</a> 2.15.3</li>
         <li><a href="http://pygtk.org" target="_blank">gnome-python</a> 2.10</li>
         <li><a href="http://pygtk.org" target="_blank">gnome-desktop</a> 2.10</li>
         <li><a href="http://www.freedesktop.org/wiki/Software/DBusBindings" target="_blank">D-Bus Python</a> 0.80.2</li>
@@ -54,12 +54,17 @@
       
     <h3>Latest release</h3>
       <div class="download">
-      <a href="http://download.gnome.org/sources/deskbar-applet/2.24/deskbar-applet-2.24.3.tar.gz"
+      <a href="http://download.gnome.org/sources/deskbar-applet/2.26/deskbar-applet-2.26.0.tar.gz"
       title="Source code of the latest stable release">
       <img src="./images/package-x-generic.png" alt="source package" />
-      Deskbar-Applet 2.24.3</a></div>
+      Deskbar-Applet 2.26.0</a></div>
   
     <h3>Past releases</h3>
+      <div class="download">
+      <a href="http://download.gnome.org/sources/deskbar-applet/2.24/deskbar-applet-2.24.3.tar.gz">
+      <img src="./images/package-x-generic.png" alt="source package" />
+      Deskbar-Applet 2.24.3</a></div>
+    
       <div class="download">
       <a href="http://download.gnome.org/sources/deskbar-applet/2.24/deskbar-applet-2.24.2.tar.gz">
       <img src="./images/package-x-generic.png" alt="source package" />
@@ -101,56 +106,19 @@
       <a href="./getinvolved.html">Get involved</a> page.</p>
       
     <h3>Minimum Requirements</h3>
-      Same as stable version, except
-      <ul>
-      <li><a href="http://pygtk.org" target="_blank">PyGObject</a> 2.15.3</li>
-      </ul>
+      Same as stable version.
       
     <h3>Latest release</h3>
 
-      <!-- <p>There is currently no separate development release.</p> -->
-      
+      <p>There is currently no separate development release.</p>
+      <!--
       <div class="download">
       <a href="http://download.gnome.org/sources/deskbar-applet/2.25/deskbar-applet-2.25.92.tar.gz"
       title="Source code of the latest unstable release">
       <img src="./images/package-x-generic.png" alt="source package" />
       Deskbar-Applet 2.25.92</a></div>
-    
-    <h3>Past releases</h3>
-      <div class="download">
-      <a href="http://download.gnome.org/sources/deskbar-applet/2.25/deskbar-applet-2.25.91.tar.gz">
-      <img src="./images/package-x-generic.png" alt="source package" />
-      Deskbar-Applet 2.25.91</a></div>
-    
-      <div class="download">
-      <a href="http://download.gnome.org/sources/deskbar-applet/2.25/deskbar-applet-2.25.90.tar.gz">
-      <img src="./images/package-x-generic.png" alt="source package" />
-      Deskbar-Applet 2.25.90</a></div>
-    
-      <div class="download">
-      <a href="http://download.gnome.org/sources/deskbar-applet/2.25/deskbar-applet-2.25.5.tar.gz">
-      <img src="./images/package-x-generic.png" alt="source package" />
-      Deskbar-Applet 2.25.5</a></div>
-    
-      <div class="download">
-      <a href="http://download.gnome.org/sources/deskbar-applet/2.25/deskbar-applet-2.25.4.tar.gz">
-      <img src="./images/package-x-generic.png" alt="source package" />
-      Deskbar-Applet 2.25.4</a></div>
-    
-      <div class="download">
-      <a href="http://download.gnome.org/sources/deskbar-applet/2.25/deskbar-applet-2.25.3.tar.gz">
-      <img src="./images/package-x-generic.png" alt="source package" />
-      Deskbar-Applet 2.25.3</a></div>
-    
-      <div class="download">
-      <a href="http://download.gnome.org/sources/deskbar-applet/2.25/deskbar-applet-2.25.2.tar.gz">
-      <img src="./images/package-x-generic.png" alt="source package" />
-      Deskbar-Applet 2.25.2</a></div>
-      
-      <div class="download">
-      <a href="http://download.gnome.org/sources/deskbar-applet/2.25/deskbar-applet-2.25.1.tar.gz">
-      <img src="./images/package-x-generic.png" alt="source package" />
-      Deskbar-Applet 2.25.1</a></div>
+      -->
+<!--    <h3>Past releases</h3> -->
       
     </div>
   </body>
