@@ -71,6 +71,7 @@
 			<li><b>Google Code Search</b>: Search public source code for function definitions and sample code</li>
 			<li><b>Google Search</b>: Search Google directly from Deskbar</li>
 			<li><b>History</b>: Recognize previously used searches</li>
+			<li><b>OpenSearch</b>: Search any OpenSearch compliant website</li>
 			<li><b>Programs</b>: Launch a program by its name and/or description</li>
 			<li><b>Recent Documents</b>: Retrieve your recently accessed files and locations</li>
 			<li><b>Tomboy Notes</b>: Search your Tomboy notes</li>
@@ -90,6 +91,13 @@
         <div id="news">
 	    <h2 class="">News</h2>
 	    
+	    <h3>March 17, 2009</h3>
+	      <b>Stable</b> version 2.26.0 released.<br />
+	      <ul>
+	      <li>Updated translations</li>
+	      </ul>
+	      <a href="download.html">Download it</a>
+	      
 	    <h3>March 2, 2009</h3>
 	      <b>Unstable</b> version 2.25.92 released.<br />
 	      <ul>
