@@ -1,3 +1,9 @@
+2009-03-17	Sebastian Pölsterl	<sebp@cvs.gnome.org>
+
+	* download.html:
+	* index.html:
+	Added 2.26.0 release
+
 2009-03-02	Sebastian Pölsterl	<sebp@cvs.gnome.org>
 
 	* download.html:
